[B]0.94[/B]
- Updated permissions on install

[B]0.93[/B]
- Small bug fix on Tranceiver devices enable (v0.92 might fail on Raspbian Stretch)

[B]0.92[/B]
- Added ignore repeats for Rx signal

[B]0.91[/B]
- Hardware testing
- Fixed some typos ...

[B]0.90[/B]
- Added enable and rx/tx control functionality for Transceiver devices
- Added PLL charge and discharge functionality for Aurel devices (like RTX-MID-xV)

[B]0.80[/B]
- Initial release
- IO/ software working correctly
- Not tested with real hardware yet