@@ -15,6 +15,9 @@ PORT=51721
 # Maximum number of clients (5 by default)
 MAXCLIENTS=5
 
+# Echo any Tx command via client interface (1 by default)
+CMDECHO=1
+
 # Receiver Settings
 
 # Type of device to communicate with
